comminting meteo data clean code1

--- a/meteo_data_reading-1.ipynb
+++ b/meteo_data_reading-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "d4ae3ff9",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "└──────────────┴─────────────┴──────────┴──────────┴───┴──────────┴──────────┴──────────┴──────────┘"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "2dc0b7cf",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "b57c9729",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "└──────────────┴─────────────┴──────────┴──────────┴───┴──────────┴──────────┴──────────┴──────────┘"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "0a701295",
    "metadata": {},
    "outputs": [
@@ -581,12 +581,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "844fb5e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_df.write_csv(\"D:/KADI-ASSIGNMENT/meteo.data.csv\")"
+    "#combined_df.write_csv(\"D:/KADI-ASSIGNMENT/meteo.data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61bcf78c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "\n",
+    "# Refined headers\n",
+    "default_header = \"Station/Location,Date,tre200s0,uor200s0,prestas0,fkl010z0,fkl010z1,dkl010z0,rre150z0\"\n",
+    "second_header = \"GAW-METEO,Date,temp,RH,ATPRES,WS1,WS2,WDIR,PRECIP\"\n",
+    "\n",
+    "# Paths\n",
+    "output_path = \"D:/KADI-ASSIGNMENT/meteo.data.csv\"\n",
+    "temp_data_path = \"D:/KADI-ASSIGNMENT/meteo_data.csv\"\n",
+    "\n",
+    "# Overwrite first column with \"GAW-METEO\"\n",
+    "combined_df = combined_df.with_columns([\n",
+    "    pl.lit(\"GAW-METEO\").alias(combined_df.columns[0])\n",
+    "])\n",
+    "\n",
+    "# Save to temp file without header\n",
+    "combined_df.write_csv(temp_data_path, include_header=False)\n",
+    "\n",
+    "# Write final CSV with refined headers\n",
+    "with open(output_path, 'w') as out_file:\n",
+    "    out_file.write(default_header + '\\n')\n",
+    "    out_file.write(second_header + '\\n')\n",
+    "    with open(temp_data_path, 'r') as temp_file:\n",
+    "        out_file.write(temp_file.read())\n",
+    "\n",
+    "\n"
    ]
   }
  ],
